--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alembic = "==1.9.2"
+alembic = "*"
 click = "==8.1.3"
-flask = "==2.2.2"
+flask = "*"
 flask-cors = "==3.0.10"
 flask-login = "==0.6.2"
-flask-migrate = "==4.0.2"
-flask-sqlalchemy = "==3.0.2"
-flask-wtf = "==1.1.1"
+flask-migrate = "*"
+flask-sqlalchemy = "*"
+flask-wtf = "*"
 greenlet = "==3.0.1"
 gunicorn = "==20.1.0"
 importlib-metadata = "==6.9.0"
@@ -20,14 +20,14 @@ jinja2 = "==3.1.2"
 mako = "==1.2.4"
 markupsafe = "==2.1.2"
 python-dateutil = "==2.8.2"
-python-dotenv = "==0.21.0"
+python-dotenv = "*"
 python-editor = "==1.0.4"
 six = "==1.16.0"
-sqlalchemy = "==1.4.46"
+sqlalchemy = "*"
 werkzeug = "==2.2.2"
-wtforms = "==3.0.1"
+wtforms = "*"
 zipp = "==3.17.0"
-boto3 = ">=1.0.0"
+boto3 = "*"
 pylint = "*"
 
 [dev-packages]
