--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,10 @@ name = "pypi"
 [packages]
 alembic = "==1.9.2"
 click = "==8.1.3"
-flask = "*"
+flask = "==2.2.2"
 flask-cors = "==3.0.10"
 flask-login = "==0.6.2"
-flask-migrate = "*"
+flask-migrate = "==4.0.2"
 flask-sqlalchemy = "==3.0.2"
 flask-wtf = "==1.1.1"
 greenlet = "==3.0.1"
@@ -27,8 +27,19 @@ sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 zipp = "==3.17.0"
-boto3 = "*"
+boto3 = ">=1.0.0"
 pylint = "*"
+cachetools = "==5.3.1"
+certifi = "==2023.7.22"
+charset-normalizer = "==3.2.0"
+google-auth-oauthlib = "==1.0.0"
+google-auth = "==2.22.0"
+oauthlib = "==3.2.2"
+requests-oauthlib = "==1.3.1"
+requests = "==2.31.0"
+rsa = "==4.9"
+urllib3 = "==1.26.16"
+psycopg2 = "==2.9.9"
 
 [dev-packages]
 
